welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:-5: error: Unmatched closing brace '}' ignored here
	}
        ^Methods:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Methods:0: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^